examples/test/testpolicy5049.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5049
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key9: value7
      key17: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value39
          key38: value43
      podSelector:
        matchLabels:
          key20: value49
